# VCMangler

./: LICENSE  README.md  VCMangler.cabal
app/: Main.hs
src/: VCMangler.hs
src/VCMangler/: Maps.hs  Parsers.hs  Types.hs
test/: Spec.hs
