name:                VCMangler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/VCMangler#readme
license:             BSD3
license-file:        LICENSE
author:              Micah Hahn
maintainer:          micah.s.hahn@gmail.com
copyright:           2016 Micah Hahn
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, src/VCMangler
  exposed-modules:     VCMangler, VCMangler.Types, VCMangler.Maps, VCMangler.Parsers
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable VCMangler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , VCMangler
  default-language:    Haskell2010

test-suite VCMangler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , VCMangler
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/VCMangler
